Conformance/Compiler/testsuite/src/tests/04_expressions/16_relational_expressions/a06/test_a06_72.cj

/*
 * Copyright (c) Huawei Technologies Co., Ltd. 2025. All rights reserved.
 * This source file is part of the Cangjie project, licensed under Apache-2.0
 * with Runtime Library Exception.
 * 
 * See https://cangjie-lang.cn/pages/LICENSE for license information.
 */

/*
  @Name:        04_16_a06_72

  @Level:         1

  @Assertion:   4.16(6) Note that the relational operators are non-associative, i.e., an expression like a < b < c is
                invalid
                main(): Int64 {
                    3 < 4 < 5 // error: `<` is non-associative
                    3 == 3 != 4 // error: `==` and `!=` are non-associative
                    return 0
                }
  @Description: Checks that expression a < b < c is invalid.
  @Mode: compileonly
  @Negative: yes
  @Structure: single
  @CompileWarning: no
  @Comment: Auto-generated by gen.py

*/

main() {
    var a : String = "1"
    var b : String = "1"
    var c : String = "1"
    a < b < c
    0
}
